kube/misc/echoserver-staging/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - staging.cohesiv.io
    secretName: echoserver-tls
  rules:
  - host: staging.cohesiv.io
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
